[project]
name = "soma-songs"
version = "1.0.3"
description = "Save song data from somafm.com as JSON"
authors = [
    {name = "inktrap", email = "inktrap@inktrap.org"},
]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "tinydb>=4.8.0",
    "requests>=2.31.0",
    "rich>=13.5.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["music", "scraper", "json", "somafm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "requests-cache>=1.1.0",
    "pre-commit",
]
test = [
]

[project.urls]
Homepage = "https://github.com/inktrap/soma-songs"
# Issues = "https://github.com/inktrap/soma-songs/issues"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

#[project.scripts]
#my-client = "my_package.my_module:main_cli"
[project.scripts]
soma-songs = "soma_songs.main:main"
